--- a/Modules/FIT/FV0/CMakeLists.txt
+++ b/Modules/FIT/FV0/CMakeLists.txt
@@ -10,7 +10,8 @@ target_sources(O2QcFV0 PRIVATE src/TH1ReductorLaser.cxx
                                src/PostProcTask.cxx
                                src/OutOfBunchCollCheck.cxx
                                src/TriggersSwVsTcmCheck.cxx
-                               src/OutOfBunchCollFeeModulesCheck.cxx)
+                               src/OutOfBunchCollFeeModulesCheck.cxx
+                               src/RecPointsQcTask.cxx)
 
 target_include_directories(
   O2QcFV0
@@ -40,6 +41,7 @@ add_root_dictionary(O2QcFV0
           include/FV0/GenericCheck.h
           include/FV0/TriggersSwVsTcmCheck.h
           include/FV0/OutOfBunchCollFeeModulesCheck.h
+          include/FV0/RecPointsQcTask.h
   LINKDEF include/FV0/LinkDef.h)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/FV0
@@ -47,6 +49,7 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/FV0
 
 install(FILES etc/fv0-digits.json
               etc/fv0-post-processing.json
+              etc/fv0-recpoints.json
         DESTINATION Modules/FIT/FV0/etc)
 
 # ---- Test(s) ----
