--- a/Modules/FIT/FV0/CMakeLists.txt
+++ b/Modules/FIT/FV0/CMakeLists.txt
@@ -11,7 +11,8 @@ target_sources(O2QcFV0 PRIVATE src/TH1ReductorLaser.cxx
                                src/OutOfBunchCollCheck.cxx
                                src/TriggersSwVsTcmCheck.cxx
                                src/OutOfBunchCollFeeModulesCheck.cxx
-                               src/RecPointsQcTask.cxx)
+                               src/RecPointsQcTask.cxx
+                               src/MeanCheck.cxx)
 
 target_include_directories(
   O2QcFV0
@@ -42,6 +43,7 @@ add_root_dictionary(O2QcFV0
           include/FV0/TriggersSwVsTcmCheck.h
           include/FV0/OutOfBunchCollFeeModulesCheck.h
           include/FV0/RecPointsQcTask.h
+          include/FV0/MeanCheck.h
   LINKDEF include/FV0/LinkDef.h)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/FV0
